full-moon/tests/roblox_cases/fail/parser/generic_declare_no_parameters/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
---
error[ast]: expected a generic type name
  ┌─ source.lua:1:10
  │
1 │ type Foo<> = () -> ()
  │          ^


